--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Your OpenAI API key
-OPENAI_API_KEY=XXX
+OPENAI_API_KEY=x
 
 # Your Telegram bot token obtained using @BotFather
 TELEGRAM_BOT_TOKEN=XXX
